--- a/src/style/motor-control-zone-style.css
+++ b/src/style/motor-control-zone-style.css
@@ -1,12 +1,8 @@
 .motor-control-zone {
-    width: 750px;
-    height: 590px;
+    width: 570px;
+    height: 440px;
     background-color: white;
-    border-radius: 20px;
-    min-width: 750px;
-    min-height: 590px;
     border-style: solid;
-    border-radius: 10px;
     border-width: 2px;
     align-items: center;
 }
@@ -14,10 +10,11 @@
 .motor-setting {
     border-style: solid;
     border-width: 2px;
-    border-radius: 10px;
-    width: 700px;
-    height: 257px;
-    margin-bottom: 15px;
-    margin-left: 22px;
+    border-radius: 15px;
+
+    height: 187px;
+    margin-bottom: 11px;
+    margin-left: 16px;
+    margin-right: 16px;
 }
 
