--- a/src/style/serial-port-zone-style.css
+++ b/src/style/serial-port-zone-style.css
@@ -1,55 +1,48 @@
-#send-text {
-    width: 321px;
-}
-
 .serial-port-zone {
-    height: 590px;
-    width: 590px;
+    height: 440px;
+    width: 450px;
     background-color: white;
-    border-radius: 20px;
+
     margin-right: 10px;
-    min-width: 590px;
-    min-height: 590px;
     border: 2px solid;
 }
 
 .serial-port-input {
-    height: 32px;
-    width: 150px;
-    border-radius: 10px;
+    height: 24px;
+    width: 230px;
+    border-radius: 5px;
 }
 
 .serial-port-select-zone {
-    height: 35px;
-    width: 180px;
-    border-radius: 10px;
+    height: 24px;
+    width: 115px;
+    border-radius: 5px;
     border: 2px solid;
 }
 
 .serial-port-button {
-    width: 89.6px;
-    height: 32px;
+    width: 73px;
+    height: 24px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .recv-textarea {
-    margin-left: 15px;
-    width: 550px;
-    height: 385px;
+    margin-left: 10px;
+    width: 390px;
+    height: 276px;
     border: 3px solid black;
-    border-radius: 10px;
-
+    border-radius: 15px;
+    margin-right: 10px;
     font-family: 'Inter', sans-serif;
     font-weight: 400; /* 简化为font-weight */
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 1px;
-    resize: none; /* 禁用拖动调整大小 */
 }
 
 .profile-box {
-    margin-top: 15px;
+    margin-top: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,7 +50,7 @@
 }
 
 .send-zone {
-    margin-top: 10px;
+    margin-top: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,8 +58,8 @@
 }
 
 .recv-zone {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 8px;
+    margin-bottom: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -77,5 +70,4 @@
     height: 60px;
     font-family: 'Inter', sans-serif;
     font-weight: 400; /* 简化为font-weight */
-    font-size: 16px;
 }
