--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -4,16 +4,16 @@
 .up-div {
     display: flex;
     align-items: center;
+    width: 980px;
 }
 
-.button-div {
+.bottom-div {
     display: flex;
-    width: 1355px;
-    height: 350px;
+    width: 977px;
+    height: 265px;
     background-color: white;
-    margin-top: 10px;
+    margin-top: 5px;
     border-style: solid;
-    border-radius: 10px;
     border-width: 2px;
     align-items: center;
     
@@ -23,4 +23,5 @@ body {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-variation-settings: "slnt" 0, "wght" 400;
-  }
+    font-size: 14px;
+}
